syntax = "proto3";

option csharp_namespace = "ECommerce.Discount.Grpc";

package discount;

//Discount service definition
service DiscountProto{
	//Discount CRUD operations
	rpc GetDiscount(GetDiscountRequest) returns (CouponModel);
	rpc CreateDiscount(CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount(DeletediscountRequest) returns (DeletediscountResponse);
}

message CouponModel{
	int32 id=1;
	string productName=2;
	string description=3;
	double amount=4;	
}

message GetDiscountRequest{
	string productName=1;
}

message CreateDiscountRequest{
	CouponModel coupon=1;
}

message UpdateDiscountRequest{
	CouponModel coupon=1;

}

message DeletediscountRequest{
	string productName=1;
}


message DeletediscountResponse{
	bool success=1;
}